--- a/web/src/pages/Home/styles.css
+++ b/web/src/pages/Home/styles.css
@@ -73,10 +73,11 @@
   height: 20px;
 }
 
-#page-home .content main a strong {
+#page-home .content main a #register {
   flex: 1;
   text-align: center;
   color: #FFF;
+  font-weight: 700;
 }
 
 #page-home .content main a:hover {
