--- a/web/src/pages/Home/styles.css
+++ b/web/src/pages/Home/styles.css
@@ -55,7 +55,7 @@
   margin-top: 40px;
 }
 
-#page-home .content main a span {
+#page-home .content main a #register-icon {
   display: block;
   background: rgba(0, 0, 0, 0.08);
   width: 72px;
