Estilizando inputs e selects

--- a/web/src/pages/CreatePoint/styles.css
+++ b/web/src/pages/CreatePoint/styles.css
@@ -103,10 +103,19 @@
   flex: 1;
   width: 100%;
   padding: 1rem;
-  border: 0.0625rem solid;
+  outline: 0;
+  border: none;
+  border-bottom: 0.10rem solid #322153;
   border-radius: 0.375rem;
   color: #6C6C80;
   background: #F0F0F5;
+}
+
+#page-create-point form .field input[type=text]:focus,
+#page-create-point form .field input[type=email]:focus,
+#page-create-point form .field input[type=number]:focus {
+  box-shadow: 0 0 0.3125rem rgba(81, 203, 238, 1);
+  border-color: rgba(81, 203, 238, 1);
 }
 
 #page-create-point form .field select {
@@ -116,11 +125,18 @@
   flex: 1;
   width: 100%;
   padding: 1rem;
-  border: 0.0625rem solid;
+  outline: 0;
+  border: none;
+  border-bottom: 0.10rem solid #322153;
   border-radius: 0.375rem;
   color: #6C6C80;
   background: #F0F0F5;
 }
+
+#page-create-point form .field select:focus {
+  box-shadow: 0 0 0.3125rem rgba(81, 203, 238, 1);
+  border-color: rgba(81, 203, 238, 1);
+} 
 
 #page-create-point form .field input::placeholder {
   color: #A0A0B2;
