--- a/web/src/pages/CreatePoint/styles.css
+++ b/web/src/pages/CreatePoint/styles.css
@@ -2,6 +2,13 @@
   font-weight: 700;
 }
 
+.error-message{
+  padding: 0.5rem;
+  font-size: 0.875rem;
+  font-weight: normal;
+  color: #F00;
+}
+
 #page-create-point {
   display: flex;
   justify-content: center;
@@ -55,8 +62,12 @@
   font-size: 2.25rem;
 }
 
-#page-create-point form h1 span {
+#page-create-point form h1 #form-title {
   display: block;
+}
+
+#page-create-point form #drop{
+  height: 23.125rem;
 }
 
 #page-create-point form fieldset {
@@ -78,7 +89,7 @@
   font-size: 1.5rem;
 }
 
-#page-create-point form legend span {
+#page-create-point form legend .clue {
   font-size: 0.875rem;
   font-weight: normal;
   text-align: right;
@@ -93,6 +104,7 @@
 #page-create-point form .field {
   flex: 1;
   margin-bottom: 1.5rem;
+  height: 7.5rem;
   display: flex;
   flex-direction: column;
 }
@@ -100,7 +112,6 @@
 #page-create-point form .field input[type=text],
 #page-create-point form .field input[type=email],
 #page-create-point form .field input[type=tel] {
-  flex: 1;
   width: 100%;
   padding: 1rem;
   outline: 0;
@@ -122,7 +133,6 @@
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  flex: 1;
   width: 100%;
   padding: 1rem;
   outline: 0;
@@ -179,6 +189,10 @@
   border-radius: 0.5rem;
 }
 
+#page-create-point form #map-container{
+  height: 25.9375rem;
+}
+
 #page-create-point form button {
   margin: 2.5rem 0;
   width: 18rem;
@@ -197,11 +211,16 @@
   background: #2FB86E;
 }
 
+#items-container{
+  height: 27.5rem;
+}
+
 .items-grid {
   list-style: none;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
+  margin-bottom: 1.5rem;
 }
 
 .items-grid li {
@@ -224,7 +243,7 @@
   height: auto;
 }
 
-.items-grid li span {
+.items-grid li .item-title {
   align-items: center;
   color: var(--title-color);
   flex: 1;
@@ -277,6 +296,10 @@
 @media(max-width: 495px) {
   #page-create-point form {
     padding: 0.5rem;
+  }
+
+  #items-container{
+    height: 38.75rem;
   }
 
   .items-grid {
