Cadastros de pontos de coleta no banco de dados

--- a/web/src/pages/Home/styles.css
+++ b/web/src/pages/Home/styles.css
@@ -43,7 +43,7 @@ form{
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgba(0, 0, 0, .1);
+  /*background-color: rgba(0, 0, 0, .5);*/
 }
 
 #page-home .content main form a {
